<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="br.com.dojo.project.view.chooseParams.viewModel.ChooseParamsViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

        <include
                android:id="@+id/toolbar_container"
                layout="@layout/simple_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                <TextView
                        style="@style/Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:gravity="center"
                        android:text="@string/choose_params_title" />

                <!--Amount-->
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/amount_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        app:boxStrokeColor="@color/medium_grey">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/amount"
                            style="@style/Subtitle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:hint="@string/choose_params_amount"
                            android:lineSpacingExtra="6dp"
                            android:maxLines="1"
                            android:inputType="number"
                            android:text="@={viewModel.model.amount}"
                            android:textColor="@color/medium_grey"
                            android:textColorHint="@color/light_grey" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--Region-->
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/region_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        app:boxStrokeColor="@color/medium_grey">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/region"
                            style="@style/Subtitle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:hint="@string/choose_params_region"
                            android:lineSpacingExtra="6dp"
                            android:maxLines="1"
                            android:text="@={viewModel.model.region}"
                            android:textColor="@color/medium_grey"
                            android:textColorHint="@color/light_grey" />
                </com.google.android.material.textfield.TextInputLayout>


                <!--Gender-->
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/gender_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        app:boxStrokeColor="@color/medium_grey">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/gender"
                            style="@style/Subtitle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:hint="@string/choose_params_gender"
                            android:lineSpacingExtra="6dp"
                            android:maxLines="1"
                            android:text="@={viewModel.model.gender}"
                            android:textColor="@color/medium_grey"
                            android:textColorHint="@color/light_grey" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Button -->
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="32dp"
                        android:background="@color/red"
                        android:fontFamily="@font/roboto_regular"
                        android:onClick="@{() -> viewModel.onSearchClick()}"
                        android:text="@string/choose_params_button"
                        android:textColor="@color/white" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>